--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
     "vue": "^2.5.2",
+    "vue-extend-layout": "^2.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
