--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-extend-layout": "^2.0.6",
     "vue-router": "^3.0.1"
