--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.2.1",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-extend-layout": "^2.0.6",
